mathutils.Matrix.Identity(4).zero() returns None #42885

Closed
opened 2014-12-12 22:32:42 +01:00 by Nicola Masotti · 7 comments

System Information
Macbook Pro 13" Mid 2012, OS X Mavericks.

Blender Version
2.72

Short description of error

mathutils.Matrix.Identity().zero() 

returns None.

This is not consistent with documentation. It should return a matrix of zeros.
It is very easy to workaround. Just do not rely on the returned object.

m = mathutils.Matrix.Identity()
m.zero()

This may be also intentional behavior. In this case the error lives in the documentation.

Exact steps for others to reproduce the error
Just run the attached .blend file

zero_method.blend

**System Information** Macbook Pro 13" Mid 2012, OS X Mavericks. **Blender Version** 2.72 **Short description of error** ``` mathutils.Matrix.Identity().zero() ``` returns None. This is not consistent with documentation. It should return a matrix of zeros. It is very easy to workaround. Just do not rely on the returned object. ``` m = mathutils.Matrix.Identity() m.zero() ``` This may be also intentional behavior. In this case the error lives in the documentation. **Exact steps for others to reproduce the error** Just run the attached .blend file [zero_method.blend](https://archive.blender.org/developer/F131081/zero_method.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NIV

Added subscriber: @NIV

This issue was referenced by 9c81833430

This issue was referenced by 9c81833430d7292483450c44443d2c3cd584dd43

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9c81833430.

Closed by commit 9c81833430.

Added subscriber: @mont29

Added subscriber: @mont29

Thanks for the report, but actually it was the doc who was wrong here, our mathutils methods never return instances of themselves (we do have a few 'ed', like normalized instead of normalize, that return a copy of their instance, but all other shall return None.

Thanks for the report anyway, doc should be fixed for next release now.

Thanks for the report, but actually it was the doc who was wrong here, our mathutils methods never return instances of themselves (we do have a few 'ed', like `normalized` instead of `normalize`, that return a copy of their instance, but all other shall return None. Thanks for the report anyway, doc should be fixed for next release now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42885
No description provided.