Fix T42885: We still had a few wrong doc in mathutils about methods returning instance of self while actually returning None...